--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'noman.placesapi:placesAPI:1.1.3'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
